...
    <string name="subject_tag_hint">Subject color tag:</string>

    <string name="save">Save</string>

    <!-- Dashboard strings -->
    <string name="tasks">Tasks</string>
    <string name="teachers">Teachers</string>
    <string name="subjects">Subjects</string>
    <string name="marks">Marks</string>
    <string name="my_schedule">My Schedule</string>
    <string name="uni_schedule">University Schedule</string>
    <string name="seed_database">Seed Database</string>
    <string name="teacher_name">Teacher Name:</string>
    <string name="teacher_degree">Teacher\'s Degree:</string>
    <string name="teacher_select">Select teacher:</string>
    <string name="contacts">Contacts:</string>
    <string name="contact_name">Key</string>
...
