<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical">

    <TextView
        style="@style/CalendarMonthTitle"
        android:id="@+id/month_title"
        android:layout_marginTop="10dp"
        android:text="Monday"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/schedule_list"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scrollbars="vertical"
        android:paddingBottom="80dp"
        android:clipToPadding="false"
        android:layout_below="@id/month_title"/>
</RelativeLayout>